# dj-split-settings

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/actions/build-deploy/: action.yml
.github/workflows/: release.yml
