[tool.poetry]
name = "dj-split-settings"
version = "0.1.0"
description = ""
authors = ["ouhammmourachid <rachidouhammou21@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
